# python-job-matcher

./: .dev.env  .env  .gitignore  README.md  pyproject.toml
src/: domain.py  enums.py  get_job_recommendations.py  http_client.py  job_recommendations.py  job_recommendations_v2.py  main.py  process_jobs_data.py  process_members_data.py  shared.py  utils.py
tests/: test_job_recommendations.py  test_process_members_data.py
