[tool.poetry]
name = "python-job-matcher"
version = "0.1.0"
description = "A simple recommendations algorithm to match members to jobs"
authors = ["christopherdonnelly <chris@inclusive.energy>"]
readme = "README.md"
packages = [{include = "python_job_matcher"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.9.1"
requests = "^2.31.0"
prettier = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
