[tool.poetry]
name = "python-job-matcher"
version = "0.1.0"
description = "A simple recommendations algorithm to match members to jobs"
authors = ["christopherdonnelly <chris@inclusive.energy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.9.1"
requests = "^2.31.0"
prettier = "^0.0.7"
python-dotenv = "^1.0.0"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
